# GraphGen

./: .gitignore  CMakeLists.txt  Notes for refactor  README.md  args.h  balanced.h  cpp_graph.h  data_gen.h  deleteme.txt  dictionaries.h  directed_graphs.h  generator.cpp  generator_test.cpp  get_generator_module.py  graph.h  graph_datasets.py  graph_tokenizer.h  graph_wrapper.h  install.sh  instance.h  khops.py  main.cpp  main.py  main_test.py  main_test_pybind_compile.py  matrix.h  old.h  old_code.txt  plotting.py  py_bindings.h  python_sample_generator.py  scratch_pads.h  setup.py  tasks.h  temp.txt  tests.h  undirected_graphs.h  utils.h
cool_graphs/: g1.txt  g3.txt
old_code/: generator.cpp  main.py
plotting/: plotting.py
